# CriptoGualet

./: .clang-format  .clang-tidy  .clangd  .claude  .editconfig  .gitignore  CI_CD_IMPLEMENTATION.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  CRASH_ANALYSIS_TRANSACTION_PARSING.md  CURSOR_IDE_SETUP.md  CppProperties.json  CriptoGualet.cpp  CriptoGualet.h  DEPLOYMENT.md  EXTENDED_FUZZING_REPORT.md  FUZZING_ASSESSMENT.md  FUZZING_SECURITY_REPORT.md  GEMINI.md  INSTALL_QT_GUIDE.md  LICENSE  QT_IMPLEMENTATION.md  README.md  WINDEBUG_INSTRUCTIONS.md  build_crash_fix.txt  build_fresh.txt  build_fresh_2.txt  build_fresh_3.txt  build_gui_fix.txt  build_gui_fix_2.txt  build_gui_fix_3.txt  compile_commands.json  configure-cmake.ps1  criptogualet.db-shm  criptogualet.db-wal  debug_test.cpp  install-vcpkg-deps.ps1  (+7 more)
.claude/: CLAUDE.md  settings.local.json
Auth/: Auth.cpp
ProjectGuides/: BlockCypher_API_README.md  CI_CD_IMPLEMENTATION.md  CLANG_DEVELOPMENT.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  EXPANDABLE_WALLET_USAGE.md  INDEX.md  INSTALL_QT_GUIDE.md  MULTI_CHAIN_ARCHITECTURE.md  MULTI_CHAIN_QUICK_REFERENCE.md  PHASE3_COMPLETION_SUMMARY.md  QR_SETUP.md  QT_IMPLEMENTATION.md  QT_UI_ARCHITECTURE.md  RELEASE_GUIDE.md  SETUP.md  SYSTEM_ARCHITECTURE.md  TESTNET_TESTING_GUIDE.md  TEST_GUIDE.md  TROUBLESHOOTING.md  VISUAL_STUDIO_SETUP.md  WORKFLOW_SEQUENCES.md
Tests/: CMakeLists.txt  TEST_IMPROVEMENTS_SUMMARY.md  test_2fa.cpp  test_auth_database_integration.cpp  test_basic_auth.cpp  test_bip32_transaction.cpp  test_bip39.cpp  test_blockcypher_api.cpp  test_database.cpp  test_ethereum_robustness.cpp  test_ethereum_wallet.cpp  test_integration_sovereign.cpp  test_multichain_wallets.cpp  test_password_verification.cpp  test_rbf_cpfp.cpp  test_repository.cpp  test_repository_consolidated.cpp  test_repository_integration.cpp  test_secure_seed.cpp  test_security_enhancements.cpp  test_segwit.cpp  test_session_consolidated.cpp  test_session_integration.cpp  test_session_manager.cpp  test_session_repository.cpp  test_session_security.cpp  test_signing_robustness.cpp  test_transaction_repository.cpp  test_user_repository.cpp  test_user_session.cpp  test_wallet_chains.cpp  test_wallet_repository.cpp
Tests/fuzzing/: CMakeLists.txt  README.md  minimal_crash_test.cpp
Tests/fuzzing/corpus/addresses/: btc_bech32_1  btc_bech32_2  btc_p2sh_1  eth_address_1  eth_address_2
Tests/fuzzing/corpus/database/: insert_1  query_1
Tests/fuzzing/corpus/json/: balance_response  error_response  eth_tx_receipt
Tests/fuzzing/corpus/transactions/: btc_tx_1  eth_raw_tx_1  eth_tx_1
Tests/fuzzing/harnesses/: fuzz_address_parsing.cpp  fuzz_crypto_operations.cpp  fuzz_database_input.cpp  fuzz_json_parsing.cpp  fuzz_transaction_parsing.cpp  fuzz_wallet_operations.cpp
Tests/include/: TestUtils.h
Tests/src/: TestUtils.cpp
backend/blockchain/: BitcoinProvider.cpp  BlockCypher.cpp  CMakeLists.txt  EthereumService.cpp  PriceService.cpp
backend/blockchain/include/: BitcoinProvider.h  BlockCypher.h  EthereumService.h  PriceService.h
backend/core/: Auth.cpp  AuthManager.cpp  Auth_Windows.cpp  Auth_macOS.cpp  CMakeLists.txt  Crypto.cpp  Crypto_Windows.cpp  Crypto_macOS.cpp  SessionManager.cpp  WalletAPI.cpp
backend/core/include/: Auth.h  AuthManager.h  Auth_Platform.h  Crypto.h  Crypto_Platform.h  SessionManager.h  WalletAPI.h
backend/core/src/: AuthManager.cpp  SessionManager.cpp
backend/database/: CMakeLists.txt
backend/database/include/Database/: DatabaseManager.h
backend/database/src/: DatabaseManager.cpp  schema_migrations.sql
backend/repository/: CMakeLists.txt
backend/repository/include/Repository/: Logger.h  RepositoryTypes.h  SessionRepository.h  SettingsRepository.h  TokenRepository.h  TransactionRepository.h  UserRepository.h  WalletRepository.h
backend/repository/src/: Logger.cpp  SessionRepository.cpp  SettingsRepository.cpp  TokenRepository.cpp  TransactionRepository.cpp  TransactionRepositoryExtensions.cpp  UserRepository.cpp  WalletRepository.cpp
backend/utils/: CMakeLists.txt  EmailService.cpp  QRGenerator.cpp  RLPEncoder.cpp  SecureCredentialStore.cpp  SecureCredentialStore_Windows.cpp  SecureCredentialStore_macOS.cpp  SharedSymbols.cpp
backend/utils/include/: EmailService.h  QRGenerator.h  RLPEncoder.h  SecureCredentialStore.h  SharedTypes.h
docs/: CI_CD.md
examples/: QtReceiveDialog_Integration_Example.cpp  wallet_integration_example.cpp
frontend/qt/: CMakeLists.txt  CriptoGualetQt.cpp  LoadingOverlay.cpp  QtEmailVerificationDialog.cpp  QtExpandableWalletCard.cpp  QtLoginUI.cpp  QtPasswordConfirmDialog.cpp  QtReceiveDialog.cpp  QtSeedDisplayDialog.cpp  QtSendDialog.cpp  QtSettingsUI.cpp  QtSidebar.cpp  QtSuccessDialog.cpp  QtTestConsole.cpp  QtThemeManager.cpp  QtTokenCard.cpp  QtTokenImportDialog.cpp  QtTokenListWidget.cpp  QtTopCryptosPage.cpp  QtWalletUI.cpp
frontend/qt/include/: CriptoGualetQt.h  LoadingOverlay.h  QtEmailVerificationDialog.h  QtExpandableWalletCard.h  QtLoginUI.h  QtPasswordConfirmDialog.h  QtReceiveDialog.h  QtSeedDisplayDialog.h  QtSendDialog.h  QtSettingsUI.h  QtSidebar.h  QtSuccessDialog.h  QtTestConsole.h  QtThemeManager.h  QtTokenCard.h  QtTokenImportDialog.h  QtTokenListWidget.h  QtTopCryptosPage.h  QtWalletUI.h
include/: Auth.h  CriptoGualet.h  CriptoGualetQt.h  Crypto.h  LoginUI.h  QRGenerator.h  QtExpandableWalletCard.h  (+5 more)
src/: Auth.cpp  BlockCypher.cpp  CMakeLists.txt  CriptoGualet.cpp  CriptoGualet.h  CriptoGualetQt.cpp  Crypto.cpp  LoginUI.cpp  QRGenerator.cpp  QtExpandableWalletCard.cpp  QtLoginUI.cpp  QtSeedDisplayDialog.cpp  QtThemeManager.cpp  QtWalletUI.cpp  SharedSymbols.cpp  WalletAPI.cpp  WalletUI.cpp
src/Auth/: Auth.cpp
src/Database/: DatabaseManager.cpp
src/Repository/: Logger.cpp  TransactionRepository.cpp  UserRepository.cpp  WalletRepository.cpp
src/Tests/: test_basic_auth.cpp  test_bip39.cpp  test_blockcypher_api.cpp  test_database.cpp  test_db_debug.cpp  test_db_step_by_step.cpp  test_repository.cpp  test_secure_seed.cpp  test_security_enhancements.cpp  test_sqlcipher_debug.cpp
(+18 files in other folders)
